# backup-service

./: .gitignore  .releaserc.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.es  README.md  entrypoint.sh  main.py  package-lock.json  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: docker.yaml  release.yaml  tests.yaml
examples/: example.ipynb
src/: main.py
src/backup/: __init__.py  main.py  options.py  utils.py
src/backup/elasticsearch/: __init__.py  cli.py  elasticsearch.py
src/backup/elasticsearch/repo/: __init__.py  cli.py
src/backup/es/: __init__.py  cli.py
src/backup/es/repo/: __init__.py  cli.py
src/backup/grip/: __init__.py  cli.py  grip.py  restore.py
src/backup/postgres/: __init__.py  cli.py  postgres.py
src/backup/s3/: __init__.py  cli.py
src/utils/: __init__.py
tests/: conftest.py  test_backup.py  test_backups.py  tests.py
tests/grip/: test_grip.py
tests/postgres/: test_postgres.py
