[project]
name = "bak"
version = "0.1.0"
description = "Data backup and recovery service for the CALYPR systems 🔄"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
bak = "backup.main:cli"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s - [%(levelname)8s] - %(message)s (%(filename)s:%(lineno)s)"
